Fix drawer tabs spacing

--- a/frontend/src/scss/VisualizersDrawer.scss
+++ b/frontend/src/scss/VisualizersDrawer.scss
@@ -11,6 +11,10 @@
         margin-left: 18px;
         user-select: none;
     }
+
+    .bp3-tab {
+        margin-right: 20px !important;
+    }
 }
 
 .view-infos {
